# hdMoonray

./: .gitignore  CMakeLists.txt  README.md  flowpipeline.yaml  package.py
cmake/: HatsTest.cmake  HdMoonrayCompileDefinitions.cmake  HdMoonrayCompileOptions.cmake
cmd/hd_cmd/hd_render/: CMakeLists.txt  FreeCamera.cc  FreeCamera.h  OutputFile.h  RenderOptions.cc  RenderOptions.h  RenderSettings.h  SceneDelegate.h  hd_render.cc
cmd/hd_cmd/hd_usd2rdl/: CMakeLists.txt  FreeCamera.cc  FreeCamera.h  RenderOptions.cc  RenderOptions.h  RenderSettings.h  SceneDelegate.h  hd_usd2rdl.cc
docs/: hdMoonray_aov_audit.md  hdMoonray_development_guide.md  hdMoonray_development_patterns_from_features.md  hdMoonray_feature_implementation_pattern.md  hdMoonray_stable_vs_wip_matrix.md  hdMoonray_validation_workflow.md  houdini20_5_camera_framing_contract.md  houdini20_5_hdMoonrayAdapters_compat.md  houdini20_5_ocio_colormanagement.md  houdini20_5_render_contract_final.md  houdini20_5_render_contract_final_dirty_stack.md  houdini20_5_renderprep_signal9_displacement_reduction.md  houdini20_5_sceneindex_dirty_stack_audit.md  houdini20_5_sceneindex_render_product_contract.md  houdini20_5_solaris_ipr_warning_path.md  houdini20_5_usd_hydra_render_contract.md  units-and-scale-notes.md
hats/camera/: camera_anim_focal.canonical.rdla  camera_anim_transform.canonical.rdla  camera_clipping.canonical.rdla  camera_dof.canonical.rdla
hats/geometry/: geometry_basis_curves.canonical.rdla  geometry_instances.canonical.rdla  geometry_motion_blur.canonical.rdla  geometry_primvar_interpolation.canonical.rdla  geometry_primvars.canonical.rdla  geometry_procedural.canonical.rdla  geometry_skel.canonical.rdla  geometry_skel.usd  geometry_subdivision.canonical.rdla  geometry_two_triangles.canonical.rdla  geometry_volume.canonical.rdla
hats/light/: CMakeLists.txt  light_cylinder.canonical.rdla  light_cylinder.usd  light_disk.canonical.rdla  light_disk.usd  light_env.canonical.rdla  light_env.usd  light_env_textured.canonical.rdla  light_env_textured.usd  light_linking.canonical.rdla  light_rect.canonical.rdla  light_rect.usd  light_rect_textured.canonical.rdla  light_rect_textured.usd  light_shadow.canonical.rdla  light_sphere.canonical.rdla  light_sphere.usd  light_spot.canonical.rdla  light_spot.usd  light_sun.canonical.rdla  light_sun.usd
hats/lightfilter/: lightfilter_barn_door.canonical.rdla  lightfilter_color_ramp.canonical.rdla  lightfilter_combine.canonical.rdla  lightfilter_cookie.canonical.rdla  lightfilter_cookie_projector.canonical.rdla  lightfilter_cookie_v2.canonical.rdla  lightfilter_decay.canonical.rdla  lightfilter_intensity.canonical.rdla  lightfilter_rod.canonical.rdla  lightfilter_vdb.canonical.rdla
hats/material/: material_dwabase.canonical.rdla  material_dwabase_defaults.canonical.rdla  material_dwabase_normal.canonical.rdla  material_dwametal_defaults.canonical.rdla  material_udim.canonical.rdla
lib/hydramoonray/: CMakeLists.txt  Camera.cc  Camera.h  ColorManagement.cc  ColorManagement.h  CoordSys.h  Instancer.cc  Instancer.h  Light.cc  Light.h  LightFilter.cc  LightFilter.h  Material.cc  Material.h  Mesh.cc  PrimTypeUtils.cc  PrimTypeUtils.h  Primvars.cc  RenderBuffer.cc  RenderBuffer.h  RenderDelegate.cc  RenderDelegate.h  RenderPass.cc  RenderPass.h  RenderSettings.cc  RenderSettings.h  Renderer.h  ValueConverter.cc  ValueConverter.h
plugin/adapters/: CMakeLists.txt  GeometryLightAdapter.h  MoonrayLightFilterAdapter.cc  MoonrayLightFilterAdapter.h  MoonrayMeshLightAdapter.h  ProceduralAdapter.h
plugin/adapters/compat/houdini20_5_usd24_xcode26/pxr/usd/sdf/: childrenProxy.h
plugin/hd_moonray/: ArrasRenderer.cc  ArrasRenderer.h
plugin/hd_moonray_debug/: RndrRenderer.cc
plugin/houdini/: UsdRenderers.json
testSuite/: README.md
testSuite/aov/render_var_source_metadata/: scene.usd  test.xml
testSuite/geometry/moonray_geometry_settings/: README.md  geometry_settings.usda
testSuite/light/adapter_runtime/: README.md  moonray_h20_adapter_fixture.usda
testSuite/light/env_schema_v1/: scene.usd  test.xml
testSuite/runtime/h20_isolation/: bare_sphere_no_material.usda  bare_sphere_simple_material.usda  dome_constant_no_texture.usda  dome_texture.usda  dwa_material_no_dome.usda  generate_houdini_domelight_lop_fixture.py  generate_moonray_material_builder_fixture.py
testSuite/runtime/h20_isolation/assets/: dome_texture.ppm
